# OpenGUT

./: .gitignore  .gitmodules  README.md
Firmware/: CMakeLists.txt  Hello_World.txt  README.md  Readme.md  nrf52840dk_nrf52840.overlay  prj.conf
Firmware/Firmware_Button_based_selection/: README.MD
Firmware/Firmware_Button_based_selection/src/: PDM.h  Playback.c  SD.c  SD.h  led.c  led.h  switches.c  switches.h
Firmware/Firmware_UI_based_selection/: CMakeLists.txt  README.md  app.overlay  prj.conf
Firmware/Firmware_UI_based_selection/src/: PDM.c  PDM.h  Playback.c  Playback.h  SD.c  SD.h  app_config.c  app_config.h  led.c  led.h  main.c
Firmware/src/: PDM.c  Playback.h  main.c  switches.c  switches.h
Hardware/: README.MD  README.md  Readme.md
Hardware/Enclosure Design Files/: Bottom Cover.SLDPRT  Cone.STL  Top Cover.SLDPRT  bottom cover.STL
Hardware/Enclosure_Design_Files/: Cone.SLDPRT  Readme.md  top cover.STL
Hardware/OpenGUT -KiCad/: AHLAB Logo.kicad_mod  OpenGUT.csv  OpenGUT.kicad_pcb  OpenGUT.kicad_prl  OpenGUT.kicad_pro  OpenGUT.kicad_sch  OpenGUT.kicad_sch-bak  README.MD  fp-info-cache  power.kicad_sch  ~_autosave-OpenGUT.kicad_pcb.lck
Hardware/PCB Design Files/: OpenGUT.PrjPcb  Readme.md
Software/: README.md  Readme.md  app_settings.py  const.py  main.py  requirements.txt  requirements_pyenv3.12.13_venv.txt
Software/filters/: __init__.py  audiosep_filter.py  audiosep_filter2.py  filter_loader.py  scipy_highpass_filter.py  template_filter.py
Software/ui/: annotation_model.py  annotation_panel.py  audio_viewer.py  device_config_panel.py  (+2 more)
(+25 files in other folders)
